<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/foodAddScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f9f9f9"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/foodAddLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shadow"
        android:elevation="1dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/first_imageView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/photo_add_image_view" />

                    <ImageView
                        android:id="@+id/second_imageView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/photo_add_image_blank_view" />

                    <ImageView
                        android:id="@+id/third_imageView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/photo_add_image_blank_view" />

                    <ImageView
                        android:id="@+id/fourth_imageView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/photo_add_image_blank_view" />

                    <ImageView
                        android:id="@+id/fifth_imageView"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/photo_add_image_blank_view" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/foodNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="Yemek adı"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/foodNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/foodNameTitle"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/foodPreparationTextEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="Metin"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:overScrollMode="never"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/foodPreparationTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/PreparationTextTitle"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cookingTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="Pişme Süresi"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cookingTimeTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/CookingTimeTitle"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/preparationTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="Hazırlanma Süresi"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/preparationTextTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/PreparationTimeTitle"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/howManyPersonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="Yemek Kaç Kişilik"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/howManyPersonTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/HowManyPersonTitle"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/category_add_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:longClickable="false"
                android:padding="5dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/categoryTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="2dp"
                android:text="@string/CategoryTitle"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <MultiAutoCompleteTextView
                android:id="@+id/materialsFoodAddMultiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/edit_text_background"
                android:hint="Malzeme adını yazınız"
                android:overScrollMode="never"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:singleLine="false"
                android:textColor="#474747"
                android:textColorHint="#333"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/materialNoteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text= "@string/MaterialAddFoodTitle"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:onClick="saveButtonOnClick"
            android:text="@string/SaveButtonText"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>