<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context="com.fayarretype.mymobilekitchen.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="165dp"
                android:background="@drawable/banner">

                <TextView
                    android:id="@+id/bannerHeaderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="MOBiL MUTFAĞIM"
                    android:textColor="#fff"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="130dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/foodsCardView"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/foods" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/FoodsOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center|center_horizontal"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/wizard_food" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/WizardFoodOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/recipeBooksCardView"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/recipe_books" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/RecipeBookOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center|center_horizontal"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/stock" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/StockOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profileOptionsCardView"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/profile" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/ProfileOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/aboutActivityCardView"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center|center_horizontal"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/about" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/AboutOptionLayoutName"
                                android:textAlignment="center"
                                android:textColor="@color/colorOptionLayoutTextView"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
